04-pod-side-car-container.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-side-car-container
spec:
  containers:
    - name: test
      image: rkalluru/learnk8s:side-car-html-generator
      volumeMounts:
        - name: empty-dir
          mountPath: /mnt/html
    - name: nginx
      image: nginx
      volumeMounts:
        - name: empty-dir
          mountPath: /usr/share/nginx/html
  volumes:
    - name: empty-dir
      emptyDir: {}
