12-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo-01
spec:
  containers:
    - name: test
      image: rkalluru/learnk8s:rhel9-bare
