14-resources.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-02
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
      resources:
        requests:
          cpu: 100m
          memory: 200Mi
        limits:
          cpu: 200m
          memory: 1000Mi

# cpu can be cut in milli cores, 1 cpu = 1000 milli core
