15-quotas.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
spec:
  containers:
    - name: nginx
      image: nginx:1.19
      resources:
        requests:
          memory: "4Mi"
          cpu: "20m"
        limits:
          memory: "8Mi"
          cpu: "40m"
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
spec:
  containers:
    - name: nginx
      image: nginx:1.19
      resources:
        requests:
          memory: "4Mi"
          cpu: "20m"
        limits:
          memory: "8Mi"
          cpu: "40m"
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx3
spec:
  containers:
    - name: nginx
      image: nginx:1.19
      resources:
        requests:
          memory: "4Mi"
          cpu: "20m"
        limits:
          memory: "8Mi"
          cpu: "40m"
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx4
spec:
  containers:
    - name: nginx
      image: nginx:1.19
      resources:
        requests:
          memory: "4Mi"
          cpu: "20m"
        limits:
          memory: "8Mi"
          cpu: "40m"
      ports:
        - containerPort: 80
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: nginx5
#spec:
#  containers:
#    - name: nginx
#      image: nginx:1.19
#      resources:
#        requests:
#          memory: "4Mi"
#          cpu: "20m"
#        limits:
#          memory: "8Mi"
#          cpu: "40m"
#      ports:
#        - containerPort: 80
