24-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
spec:
  nodeSelector:
    nodefor: demo
  containers:
    - name: nginx
      image: nginx:1.14.2
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-02
spec:
  nodeName: ip-172-31-14-140.ec2.internal
  containers:
    - name: nginx
      image: nginx:1.14.2

# ip-172-31-14-140.ec2.internal
# ip-172-31-81-124.ec2.internal
# ip-172-31-83-205.ec2.internal
