26-pod-affinity-antiaffinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-s1
  labels:
    appName: S1
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-s2
  labels:
    appName: S2
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: pod-affinity-s1
#spec:
#  affinity:
#    podAffinity:
#      requiredDuringSchedulingIgnoredDuringExecution:
#        - labelSelector:
#            matchExpressions:
#              - key: appName
#                operator: In
#                values:
#                  - S1
#          topologyKey: topology.kubernetes.io/zone
#  containers:
#    - name: nginx
#      image: nginx:1.14.2
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: pod-anti-affinity-s1
#spec:
#  affinity:
#    podAntiAffinity:
#      preferredDuringSchedulingIgnoredDuringExecution:
#        - weight: 100
#          podAffinityTerm:
#            labelSelector:
#              matchExpressions:
#                - key: appName
#                  operator: In
#                  values:
#                    - S2
#            topologyKey: topology.kubernetes.io/zone
#  containers:
#    - name: nginx
#      image: nginx:1.14.2
